--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "@prisma/client": "^4.3.1",
+    "@types/dotenv": "^8.2.0",
     "body-parser": "^1.20.0",
     "cookie-session": "^2.0.0",
     "cors": "^2.8.5",
@@ -15,9 +16,13 @@
   },
   "devDependencies": {
     "@types/cookie-session": "^2.0.44",
+    "@types/cors": "^2.8.12",
     "@types/express": "^4.17.14",
     "@types/passport": "^1.0.11",
+    "@types/passport-google-oauth20": "^2.0.11",
     "add": "^2.0.6",
+    "ts-node": "^10.9.1",
+    "typescript": "^4.8.3",
     "yarn": "^1.22.19"
   },
   "name": "multiemail-backend",
