--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "@prisma/client": "^4.3.1",
+    "@typegoose/typegoose": "^9.12.1",
     "@types/dotenv": "^8.2.0",
     "body-parser": "^1.20.0",
     "cookie-session": "^2.0.0",
@@ -8,16 +9,20 @@
     "dotenv": "^16.0.2",
     "express": "^4.18.1",
     "express-session": "^1.17.3",
+    "http-status-codes": "^2.2.0",
     "mongoose": "^6.6.1",
     "nodemon": "^2.0.20",
     "passport": "^0.6.0",
     "passport-google-oauth20": "^2.0.0",
+    "pino": "^8.6.0",
+    "pino-pretty": "^9.1.0",
     "prisma": "^4.3.1"
   },
   "devDependencies": {
     "@types/cookie-session": "^2.0.44",
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.14",
+    "@types/express-session": "^1.17.5",
     "@types/passport": "^1.0.11",
     "@types/passport-google-oauth20": "^2.0.11",
     "add": "^2.0.6",
