--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "@prisma/client": "^4.3.1",
     "@typegoose/typegoose": "^9.12.1",
     "@types/dotenv": "^8.2.0",
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.0",
     "cookie-session": "^2.0.0",
     "cors": "^2.8.5",
@@ -10,6 +11,7 @@
     "express": "^4.18.1",
     "express-session": "^1.17.3",
     "http-status-codes": "^2.2.0",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.6.1",
     "nodemon": "^2.0.20",
     "passport": "0.6.0",
@@ -19,10 +21,12 @@
     "prisma": "^4.3.1"
   },
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.2",
     "@types/cookie-session": "2.0.44",
     "@types/cors": "2.8.12",
     "@types/express": "4.17.14",
     "@types/express-session": "1.17.5",
+    "@types/jsonwebtoken": "^8.5.9",
     "@types/passport": "1.0.11",
     "@types/passport-google-oauth20": "2.0.11",
     "add": "2.0.6",
