--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
 		"@prisma/client": "^4.3.1",
 		"@typegoose/typegoose": "^9.12.1",
 		"@types/lodash": "^4.14.186",
+		"@types/nodemailer": "^6.4.6",
 		"bcrypt": "^5.0.1",
 		"body-parser": "^1.20.0",
 		"cookie-session": "^2.0.0",
@@ -22,6 +23,7 @@
 		"jsonwebtoken": "^8.5.1",
 		"lodash": "^4.17.21",
 		"mongoose": "^6.6.1",
+		"nodemailer": "^6.8.0",
 		"nodemon": "^2.0.20",
 		"passport": "0.6.0",
 		"passport-google-oauth20": "^2.0.0",
