--- a/package.json
+++ b/package.json
@@ -1,45 +1,51 @@
 {
-  "dependencies": {
-    "@prisma/client": "^4.3.1",
-    "@typegoose/typegoose": "^9.12.1",
-    "@types/dotenv": "^8.2.0",
-    "bcryptjs": "^2.4.3",
-    "body-parser": "^1.20.0",
-    "cookie-session": "^2.0.0",
-    "cors": "^2.8.5",
-    "dotenv": "^16.0.2",
-    "express": "^4.18.1",
-    "express-session": "^1.17.3",
-    "http-status-codes": "^2.2.0",
-    "jsonwebtoken": "^8.5.1",
-    "mongoose": "^6.6.1",
-    "nodemon": "^2.0.20",
-    "passport": "0.6.0",
-    "passport-google-oauth20": "^2.0.0",
-    "pino": "^8.6.0",
-    "pino-pretty": "^9.1.0",
-    "prisma": "^4.3.1"
-  },
-  "devDependencies": {
-    "@types/bcryptjs": "2.4.2",
-    "@types/cookie-session": "2.0.44",
-    "@types/cors": "2.8.12",
-    "@types/express": "4.17.14",
-    "@types/express-session": "1.17.5",
-    "@types/jsonwebtoken": "8.5.9",
-    "@types/passport": "1.0.11",
-    "@types/passport-google-oauth20": "2.0.11",
-    "add": "2.0.6",
-    "ts-node": "10.9.1",
-    "typescript": "4.8.4",
-    "yarn": "1.22.19"
-  },
-  "name": "multiemail-backend",
-  "version": "1.0.0",
-  "main": "src/app.ts",
-  "author": "btsp",
-  "license": "MIT",
-  "scripts": {
-    "dev": "nodemon src/app.ts"
-  }
+	"name": "multiemail-backend",
+	"version": "1.0.0",
+	"main": "src/app.ts",
+	"author": "btsp",
+	"license": "MIT",
+	"scripts": {
+		"dev": "tsnd --exit-child --transpile-only src/app.ts"
+	},
+	"dependencies": {
+		"@prisma/client": "^4.3.1",
+		"@typegoose/typegoose": "^9.12.1",
+		"@types/lodash": "^4.14.186",
+		"@types/nodemailer": "^6.4.6",
+		"bcrypt": "^5.0.1",
+		"body-parser": "^1.20.0",
+		"cookie-session": "^2.0.0",
+		"cors": "^2.8.5",
+		"dotenv": "^16.0.2",
+		"express": "^4.18.1",
+		"express-session": "^1.17.3",
+		"http-status-codes": "^2.2.0",
+		"jsonwebtoken": "^8.5.1",
+		"lodash": "^4.17.21",
+		"mongoose": "^6.6.1",
+		"nodemailer": "^6.8.0",
+		"nodemon": "^2.0.20",
+		"passport": "0.6.0",
+		"passport-google-oauth20": "^2.0.0",
+		"pino": "^8.6.0",
+		"pino-pretty": "^9.1.0",
+		"prisma": "^4.3.1",
+		"zod": "^3.19.1"
+	},
+	"devDependencies": {
+		"@types/bcrypt": "^5.0.0",
+		"@types/cookie-session": "2.0.44",
+		"@types/cors": "2.8.12",
+		"@types/dotenv": "^8.2.0",
+		"@types/express": "4.17.14",
+		"@types/express-session": "1.17.5",
+		"@types/jsonwebtoken": "8.5.9",
+		"@types/passport": "1.0.11",
+		"@types/passport-google-oauth20": "2.0.11",
+		"add": "2.0.6",
+		"ts-node": "10.9.1",
+		"ts-node-dev": "^2.0.0",
+		"typescript": "4.8.4",
+		"yarn": "1.22.19"
+	}
 }
