--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
 		"@typegoose/typegoose": "^9.12.1",
 		"@types/lodash": "^4.14.186",
 		"@types/nodemailer": "^6.4.6",
-		"bcrypt": "^5.0.1",
+		"bcryptjs": "^2.4.3",
 		"body-parser": "^1.20.0",
 		"cookie-session": "^2.0.0",
 		"cors": "^2.8.5",
@@ -34,6 +34,7 @@
 	},
 	"devDependencies": {
 		"@types/bcrypt": "^5.0.0",
+		"@types/bcryptjs": "^2.4.2",
 		"@types/cookie-session": "2.0.44",
 		"@types/cors": "2.8.12",
 		"@types/dotenv": "^8.2.0",
