--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
 		"@types/passport": "1.0.11",
 		"@types/passport-google-oauth20": "2.0.11",
 		"add": "2.0.6",
+		"all-contributors-cli": "^6.22.0",
 		"ts-node": "10.9.1",
 		"ts-node-dev": "2.0.0",
 		"typescript": "4.8.4",
