Added all contributer bot

--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -1,6 +1,6 @@
 {
   "projectName": "MultiEmail-backend",
-  "projectOwner": "(Ayush Chugh)",
+  "projectOwner": "Multi Email",
   "repoType": "github",
   "repoHost": "https://github.com",
   "files": [
