refactor: :recycle: updated all contributors config

--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -1,15 +1,15 @@
 {
-  "projectName": "MultiEmail-backend",
-  "projectOwner": "Multi Email",
-  "repoType": "github",
-  "repoHost": "https://github.com",
-  "files": [
-    "README.md"
-  ],
-  "imageSize": 100,
-  "commit": true,
-  "commitConvention": "eslint",
-  "contributors": [],
-  "contributorsPerLine": 7,
-  "linkToUsage": true
+	"projectName": "MultiEmail-backend",
+	"projectOwner": "Multi Email",
+	"repoType": "github",
+	"repoHost": "https://github.com",
+	"files": [
+		"README.md"
+	],
+	"imageSize": 100,
+	"commit": true,
+	"commitConvention": "angular",
+	"contributors": [],
+	"contributorsPerLine": 7,
+	"linkToUsage": true
 }
