--- a/package.json
+++ b/package.json
@@ -42,11 +42,14 @@
 		"@types/jsonwebtoken": "8.5.9",
 		"@types/passport": "1.0.11",
 		"@types/passport-google-oauth20": "2.0.11",
+		"@typescript-eslint/eslint-plugin": "^5.38.1",
+		"@typescript-eslint/parser": "^5.38.1",
 		"add": "2.0.6",
 		"all-contributors-cli": "^6.22.0",
+		"eslint": "^8.24.0",
+		"eslint-plugin-react": "^7.31.8",
 		"ts-node": "10.9.1",
 		"ts-node-dev": "2.0.0",
-		"typescript": "4.8.4",
 		"yarn": "1.22.19"
 	}
 }
