--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
 		"pino": "^8.6.0",
 		"pino-pretty": "^9.1.0",
 		"prisma": "^4.3.1",
+		"process": "^0.11.10",
+		"yargs": "^17.6.0",
 		"zod": "^3.19.1"
 	},
 	"devDependencies": {
@@ -42,6 +44,7 @@
 		"@types/jsonwebtoken": "8.5.9",
 		"@types/passport": "1.0.11",
 		"@types/passport-google-oauth20": "2.0.11",
+		"@types/yargs": "^17.0.13",
 		"add": "2.0.6",
 		"all-contributors-cli": "^6.22.0",
 		"ts-node": "10.9.1",
