--- a/package.json
+++ b/package.json
@@ -5,7 +5,11 @@
 	"author": "btsp",
 	"license": "MIT",
 	"scripts": {
-		"dev": "tsnd --exit-child --transpile-only src/app.ts"
+		"dev": "tsnd --exit-child --transpile-only src/app.ts",
+		"build": "tsc --build"
+	},
+	"bin": {
+		"multi-email-admin": "./build/bin/index.js"
 	},
 	"dependencies": {
 		"@prisma/client": "^4.3.1",
@@ -30,6 +34,7 @@
 		"pino": "^8.6.0",
 		"pino-pretty": "^9.1.0",
 		"prisma": "^4.3.1",
+		"yargs": "^17.6.0",
 		"zod": "^3.19.1"
 	},
 	"devDependencies": {
@@ -44,6 +49,7 @@
 		"@types/passport-google-oauth20": "2.0.11",
 		"add": "2.0.6",
 		"all-contributors-cli": "^6.22.0",
+		"jest": "^29.1.2",
 		"ts-node": "10.9.1",
 		"ts-node-dev": "2.0.0",
 		"typescript": "4.8.4",
