docs: update @is-it-ayush as a contributor

--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -53,7 +53,8 @@
       "profile": "https://github.com/is-it-ayush",
       "contributions": [
         "code",
-        "mentoring"
+        "mentoring",
+        "review"
       ]
     },
     {
