--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -29,7 +29,9 @@
       "avatar_url": "https://avatars.githubusercontent.com/u/40370496?v=4",
       "profile": "https://github.com/DaatUserName",
       "contributions": [
-        "code"
+        "code",
+        "review",
+        "maintenance"
       ]
     },
     {
