docs: update @is-it-ayush as a contributor

--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -60,7 +60,8 @@
       "contributions": [
         "code",
         "mentoring",
-        "review"
+        "review",
+        "maintenance"
       ]
     },
     {
