refactor: :recycle: requested changes

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
 DB_URI="mongodb://localhost:27017/multiemail"
 GOOGLE_CLIENT_ID="paste ID here"
-GOOGLE_CLIENT_SECRET="paste PASS here"
+GOOGLE_CLIENT_SECRET="paste secret here"
 GOOGLE_CALL_BACK_URL="http://localhost:3001/api/auth/oauth/google/redirect"
 NODE_ENV="development"
 EMAIL_ID="no-reply@multiemail.us"
