--- a/.eslintrc
+++ b/.eslintrc
@@ -1,4 +1,4 @@
-module.exports = {
+{
 	"env": {
 		"es2021": true,
 		"node": true,
@@ -26,7 +26,7 @@ module.exports = {
 		"plugin:@typescript-eslint/recommended"
 	],
 	"parserOptions": {
-		"ecmaVersion": latest,
+		"ecmaVersion": 2020,
 		"sourceType": "module"
 	},
 	"settings": {
