--- a/package.json
+++ b/package.json
@@ -56,6 +56,18 @@
 		"ts-node": "10.9.1",
 		"ts-node-dev": "2.0.0",
 		"typescript": "4.8.4",
-		"yarn": "1.22.19"
+		"eslint-config-google": "0.14.0",
+		"eslint-config-prettier": "8.5.0",
+		"eslint-import-resolver-typescript": "3.5.1",
+		"eslint-plugin-import": "2.26.0",
+		"eslint-plugin-jsonc": "2.4.0",
+		"eslint-plugin-no-secrets": "0.8.9",
+		"eslint-plugin-no-unsanitized": "4.0.1",
+		"eslint-plugin-node": "11.1.0",
+		"eslint-plugin-pii": "1.0.2",
+		"eslint-plugin-prettier": "4.2.1",
+		"eslint-plugin-sonarjs": "0.15.0",
+		"prettier": "2.7.1",
+		"prettier-eslint": "15.0.1"
 	}
 }
