--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
 	"author": "btsp",
 	"license": "MIT",
 	"scripts": {
-		"dev": "tsnd --exit-child --transpile-only src/app.ts",
-		"build": "tsc --build"
+		"dev": "yarn && tsnd --exit-child --transpile-only src/app.ts",
+		"build": "yarn && tsc --build"
 	},
 	"bin": {
 		"multi-email-admin": "./build/bin/index.js"
@@ -23,6 +23,7 @@
 		"dotenv": "^16.0.2",
 		"express": "^4.18.1",
 		"express-session": "^1.17.3",
+		"helmet": "^6.0.0",
 		"http-status-codes": "^2.2.0",
 		"jsonwebtoken": "^8.5.1",
 		"lodash": "^4.17.21",
@@ -52,10 +53,6 @@
 		"add": "2.0.6",
 		"all-contributors-cli": "6.22.0",
 		"eslint": "8.24.0",
-		"jest": "29.1.2",
-		"ts-node": "10.9.1",
-		"ts-node-dev": "2.0.0",
-		"typescript": "4.8.4",
 		"eslint-config-google": "0.14.0",
 		"eslint-config-prettier": "8.5.0",
 		"eslint-import-resolver-typescript": "3.5.1",
@@ -67,7 +64,11 @@
 		"eslint-plugin-pii": "1.0.2",
 		"eslint-plugin-prettier": "4.2.1",
 		"eslint-plugin-sonarjs": "0.15.0",
+		"jest": "29.1.2",
 		"prettier": "2.7.1",
-		"prettier-eslint": "15.0.1"
+		"prettier-eslint": "15.0.1",
+		"ts-node": "10.9.1",
+		"ts-node-dev": "2.0.0",
+		"typescript": "4.8.4"
 	}
 }
