--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
 	"license": "MIT",
 	"scripts": {
 		"dev": "yarn && tsnd --exit-child --transpile-only src/app.ts",
-		"build": "yarn && tsc --build"
+		"build": "yarn && tsc --build",
+		"docs": "typedoc"
 	},
 	"bin": {
 		"multi-email-admin": "./build/bin/index.js"
