--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
 	"license": "MIT",
 	"scripts": {
 		"dev": "yarn && tsnd --exit-child --transpile-only src/app.ts",
-		"build": "yarn && tsc --build"
+		"build": "yarn && tsc --build",
+		"docs": "typedoc"
 	},
 	"bin": {
 		"multi-email-admin": "./build/bin/index.js"
@@ -69,6 +70,7 @@
 		"prettier-eslint": "15.0.1",
 		"ts-node": "10.9.1",
 		"ts-node-dev": "2.0.0",
+		"typedoc": "^0.23.15",
 		"typescript": "4.8.4"
 	}
 }
