ci: :construction_worker: deploy docs to github pages

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
 # File created using '.gitignore Generator' for Visual Studio Code: https://bit.ly/vscode-gig
 # Created by https://www.toptal.com/developers/gitignore/api/node
 # Edit at https://www.toptal.com/developers/gitignore?templates=node
-
+docs
 ### Node ###
 # Logs
 logs
