--- a/package.json
+++ b/package.json
@@ -7,12 +7,14 @@
 	"scripts": {
 		"dev": "yarn && tsnd --exit-child --transpile-only src/app.ts",
 		"build": "yarn && tsc --build",
-		"docs": "typedoc"
+		"docs": "typedoc",
+		"prepare": "husky install"
 	},
 	"bin": {
 		"multi-email-admin": "./build/bin/index.js"
 	},
 	"dependencies": {
+		"@commitlint/config-conventional": "^17.1.0",
 		"@prisma/client": "^4.3.1",
 		"@typegoose/typegoose": "^9.12.1",
 		"@types/lodash": "^4.14.186",
@@ -53,6 +55,7 @@
 		"@typescript-eslint/parser": "5.38.1",
 		"add": "2.0.6",
 		"all-contributors-cli": "6.22.0",
+		"commitlint": "^17.1.2",
 		"eslint": "8.24.0",
 		"eslint-config-google": "0.14.0",
 		"eslint-config-prettier": "8.5.0",
@@ -65,6 +68,7 @@
 		"eslint-plugin-pii": "1.0.2",
 		"eslint-plugin-prettier": "4.2.1",
 		"eslint-plugin-sonarjs": "0.15.0",
+		"husky": "^8.0.0",
 		"jest": "29.1.2",
 		"prettier": "2.7.1",
 		"prettier-eslint": "15.0.1",
