--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
 	"scripts": {
 		"dev": "yarn && tsnd --exit-child --transpile-only src/app.ts",
 		"build": "yarn && tsc --build",
-		"docs": "typedoc"
+		"docs": "typedoc",
+		"prepare": "husky install"
 	},
 	"bin": {
 		"multi-email-admin": "./build/bin/index.js"
@@ -40,6 +41,7 @@
 		"zod": "^3.19.1"
 	},
 	"devDependencies": {
+                "@commitlint/config-conventional": "^17.1.0",
 		"@types/bcrypt": "5.0.0",
 		"@types/cookie-session": "2.0.44",
 		"@types/cors": "2.8.12",
@@ -53,6 +55,7 @@
 		"@typescript-eslint/parser": "5.38.1",
 		"add": "2.0.6",
 		"all-contributors-cli": "6.22.0",
+		"commitlint": "^17.1.2",
 		"eslint": "8.24.0",
 		"eslint-config-google": "0.14.0",
 		"eslint-config-prettier": "8.5.0",
@@ -65,6 +68,7 @@
 		"eslint-plugin-pii": "1.0.2",
 		"eslint-plugin-prettier": "4.2.1",
 		"eslint-plugin-sonarjs": "0.15.0",
+		"husky": "^8.0.0",
 		"jest": "29.1.2",
 		"prettier": "2.7.1",
 		"prettier-eslint": "15.0.1",
