--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
 	"name": "multiemail-backend",
 	"version": "1.0.0",
 	"main": "src/app.ts",
-	"author": "btsp",
+	"author": "Multi Email",
 	"license": "MIT",
 	"scripts": {
 		"dev": "yarn && tsnd --exit-child --transpile-only src/app.ts",
@@ -41,7 +41,8 @@
 		"zod": "^3.19.1"
 	},
 	"devDependencies": {
-                "@commitlint/config-conventional": "^17.1.0",
+		"@commitlint/cli": "^17.1.2",
+		"@commitlint/config-conventional": "^17.1.0",
 		"@types/bcrypt": "5.0.0",
 		"@types/cookie-session": "2.0.44",
 		"@types/cors": "2.8.12",
@@ -56,6 +57,7 @@
 		"add": "2.0.6",
 		"all-contributors-cli": "6.22.0",
 		"commitlint": "^17.1.2",
+		"cz-conventional-changelog": "3.3.0",
 		"eslint": "8.24.0",
 		"eslint-config-google": "0.14.0",
 		"eslint-config-prettier": "8.5.0",
@@ -68,13 +70,18 @@
 		"eslint-plugin-pii": "1.0.2",
 		"eslint-plugin-prettier": "4.2.1",
 		"eslint-plugin-sonarjs": "0.15.0",
-		"husky": "^8.0.0",
+		"husky": "^8.0.1",
 		"jest": "29.1.2",
-		"prettier": "2.7.1",
+		"prettier": "^2.7.1",
 		"prettier-eslint": "15.0.1",
 		"ts-node": "10.9.1",
 		"ts-node-dev": "2.0.0",
 		"typedoc": "0.23.15",
 		"typescript": "4.8.4"
+	},
+	"config": {
+		"commitizen": {
+			"path": "./node_modules/cz-conventional-changelog"
+		}
 	}
 }
