tests: Wrote Authentication Tests and Minor Adjustment's.

--- a/.gitignore
+++ b/.gitignore
@@ -25,8 +25,8 @@ pids
 lib-cov
 
 # Coverage directory used by tools like istanbul
-coverage
-*.lcov
+coverage/
+*.info
 
 # nyc test coverage
 .nyc_output
