--- a/package.json
+++ b/package.json
@@ -1,74 +1,81 @@
 {
-	"name": "multiemail-backend",
-	"version": "1.0.0",
-	"main": "src/app.ts",
-	"author": "btsp",
-	"license": "MIT",
-	"scripts": {
-		"dev": "yarn && tsnd --exit-child --transpile-only src/app.ts",
-		"build": "yarn && tsc --build"
-	},
-	"bin": {
-		"multi-email-admin": "./build/bin/index.js"
-	},
-	"dependencies": {
-		"@prisma/client": "^4.3.1",
-		"@typegoose/typegoose": "^9.12.1",
-		"@types/lodash": "^4.14.186",
-		"@types/nodemailer": "^6.4.6",
-		"bcrypt": "^5.0.1",
-		"body-parser": "^1.20.0",
-		"cookie-session": "^2.0.0",
-		"cors": "^2.8.5",
-		"dotenv": "^16.0.2",
-		"express": "^4.18.1",
-		"express-session": "^1.17.3",
-		"helmet": "^6.0.0",
-		"http-status-codes": "^2.2.0",
-		"jsonwebtoken": "^8.5.1",
-		"lodash": "^4.17.21",
-		"mongoose": "^6.6.1",
-		"nodemailer": "^6.8.0",
-		"nodemon": "^2.0.20",
-		"passport": "0.6.0",
-		"passport-google-oauth20": "^2.0.0",
-		"pino": "^8.6.0",
-		"pino-pretty": "^9.1.0",
-		"prisma": "^4.3.1",
-		"yargs": "^17.6.0",
-		"zod": "^3.19.1"
-	},
-	"devDependencies": {
-		"@types/bcrypt": "5.0.0",
-		"@types/cookie-session": "2.0.44",
-		"@types/cors": "2.8.12",
-		"@types/dotenv": "8.2.0",
-		"@types/express": "4.17.14",
-		"@types/express-session": "1.17.5",
-		"@types/jsonwebtoken": "8.5.9",
-		"@types/passport": "1.0.11",
-		"@types/passport-google-oauth20": "2.0.11",
-		"@typescript-eslint/eslint-plugin": "5.38.1",
-		"@typescript-eslint/parser": "5.38.1",
-		"add": "2.0.6",
-		"all-contributors-cli": "6.22.0",
-		"eslint": "8.24.0",
-		"eslint-config-google": "0.14.0",
-		"eslint-config-prettier": "8.5.0",
-		"eslint-import-resolver-typescript": "3.5.1",
-		"eslint-plugin-import": "2.26.0",
-		"eslint-plugin-jsonc": "2.4.0",
-		"eslint-plugin-no-secrets": "0.8.9",
-		"eslint-plugin-no-unsanitized": "4.0.1",
-		"eslint-plugin-node": "11.1.0",
-		"eslint-plugin-pii": "1.0.2",
-		"eslint-plugin-prettier": "4.2.1",
-		"eslint-plugin-sonarjs": "0.15.0",
-		"jest": "29.1.2",
-		"prettier": "2.7.1",
-		"prettier-eslint": "15.0.1",
-		"ts-node": "10.9.1",
-		"ts-node-dev": "2.0.0",
-		"typescript": "4.8.4"
-	}
+  "name": "multiemail-backend",
+  "version": "1.0.0",
+  "main": "src/app.ts",
+  "author": "btsp",
+  "license": "MIT",
+  "scripts": {
+    "dev": "yarn && tsnd --exit-child --transpile-only src/app.ts",
+    "build": "yarn && tsc --build",
+    "test": "set NODE_ENV=test && jest --forceExit"
+  },
+  "bin": {
+    "multi-email-admin": "./build/bin/index.js"
+  },
+  "dependencies": {
+    "@prisma/client": "^4.3.1",
+    "@typegoose/typegoose": "^9.12.1",
+    "@types/jest": "^29.1.1",
+    "@types/lodash": "^4.14.186",
+    "@types/nodemailer": "^6.4.6",
+    "bcrypt": "^5.0.1",
+    "body-parser": "^1.20.0",
+    "cookie-session": "^2.0.0",
+    "cors": "^2.8.5",
+    "dotenv": "^16.0.2",
+    "express": "^4.18.1",
+    "express-session": "^1.17.3",
+    "helmet": "^6.0.0",
+    "http-status-codes": "^2.2.0",
+    "jsonwebtoken": "^8.5.1",
+    "lodash": "^4.17.21",
+    "mongoose": "^6.6.1",
+    "nodemailer": "^6.8.0",
+    "nodemon": "^2.0.20",
+    "passport": "0.6.0",
+    "passport-google-oauth20": "^2.0.0",
+    "pino": "^8.6.1",
+    "pino-pretty": "^9.1.0",
+    "prisma": "^4.3.1",
+    "ts-jest": "^29.0.3",
+    "yargs": "^17.6.0",
+    "zod": "^3.19.1"
+  },
+  "devDependencies": {
+    "@types/bcrypt": "5.0.0",
+    "@types/cookie-session": "2.0.44",
+    "@types/cors": "2.8.12",
+    "@types/dotenv": "8.2.0",
+    "@types/express": "4.17.14",
+    "@types/express-session": "1.17.5",
+    "@types/jsonwebtoken": "8.5.9",
+    "@types/passport": "1.0.11",
+    "@types/passport-google-oauth20": "2.0.11",
+    "@typescript-eslint/eslint-plugin": "5.38.1",
+    "@typescript-eslint/parser": "5.38.1",
+    "add": "2.0.6",
+    "all-contributors-cli": "6.22.0",
+    "axios": "^0.27.2",
+    "axios-mock-adapter": "^1.21.2",
+    "eslint": "8.24.0",
+    "eslint-config-google": "0.14.0",
+    "eslint-config-prettier": "8.5.0",
+    "eslint-import-resolver-typescript": "3.5.1",
+    "eslint-plugin-import": "2.26.0",
+    "eslint-plugin-jsonc": "2.4.0",
+    "eslint-plugin-no-secrets": "0.8.9",
+    "eslint-plugin-no-unsanitized": "4.0.1",
+    "eslint-plugin-node": "11.1.0",
+    "eslint-plugin-pii": "1.0.2",
+    "eslint-plugin-prettier": "4.2.1",
+    "eslint-plugin-sonarjs": "0.15.0",
+    "jest": "^29.1.2",
+    "mongodb-memory-server": "^8.9.3",
+    "prettier": "2.7.1",
+    "prettier-eslint": "15.0.1",
+    "supertest": "^6.3.0",
+    "ts-node": "10.9.1",
+    "ts-node-dev": "2.0.0",
+    "typescript": "4.8.4"
+  }
 }
