--- a/package.json
+++ b/package.json
@@ -15,7 +15,6 @@
 		"multi-email-admin": "./build/bin/index.js"
 	},
 	"dependencies": {
-		"@prisma/client": "^4.3.1",
 		"@typegoose/typegoose": "^9.12.1",
 		"@types/lodash": "^4.14.186",
 		"@types/nodemailer": "^6.4.6",
@@ -25,6 +24,7 @@
 		"cors": "^2.8.5",
 		"dotenv": "^16.0.2",
 		"express": "^4.18.1",
+		"express-rate-limit": "^6.6.0",
 		"express-session": "^1.17.3",
 		"helmet": "^6.0.0",
 		"http-status-codes": "^2.2.0",
@@ -71,12 +71,13 @@
 		"eslint-plugin-pii": "1.0.2",
 		"eslint-plugin-prettier": "4.2.1",
 		"eslint-plugin-sonarjs": "0.15.0",
-		"mongodb-memory-server": "8.9.3",
-    "supertest": "6.3.0",
 		"husky": "8.0.1",
 		"jest": "29.1.2",
+		"mongodb-memory-server": "8.9.3",
 		"prettier": "2.7.1",
 		"prettier-eslint": "15.0.1",
+		"supertest": "6.3.0",
+		"ts-jest": "^29.0.3",
 		"ts-node": "10.9.1",
 		"ts-node-dev": "2.0.0",
 		"typedoc": "0.23.15",
