--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
 		"cors": "^2.8.5",
 		"dotenv": "^16.0.2",
 		"express": "^4.18.1",
+		"express-rate-limit": "^6.6.0",
 		"express-session": "^1.17.3",
 		"helmet": "^6.0.0",
 		"http-status-codes": "^2.2.0",
@@ -38,6 +39,7 @@
 		"pino": "^8.6.0",
 		"pino-pretty": "^9.1.0",
 		"prisma": "^4.3.1",
+		"ts-jest": "^29.0.3",
 		"yargs": "^17.6.0",
 		"zod": "^3.19.1"
 	},
@@ -71,12 +73,12 @@
 		"eslint-plugin-pii": "1.0.2",
 		"eslint-plugin-prettier": "4.2.1",
 		"eslint-plugin-sonarjs": "0.15.0",
-		"mongodb-memory-server": "^8.9.3",
-    "supertest": "^6.3.0",
 		"husky": "8.0.1",
 		"jest": "29.1.2",
+		"mongodb-memory-server": "^8.9.3",
 		"prettier": "2.7.1",
 		"prettier-eslint": "15.0.1",
+		"supertest": "^6.3.0",
 		"ts-node": "10.9.1",
 		"ts-node-dev": "2.0.0",
 		"typedoc": "0.23.15",
