--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
 		"pino": "^8.6.0",
 		"pino-pretty": "^9.1.0",
 		"prisma": "^4.3.1",
+		"ts-jest": "^29.0.3",
 		"yargs": "^17.6.0",
 		"zod": "^3.19.1"
 	},
