--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
 	"author": "Multi Email",
 	"license": "MIT",
 	"scripts": {
+		"start": "./build/src/app.js",
 		"dev": "yarn && tsnd --exit-child --transpile-only src/app.ts",
 		"build": "yarn && tsc --build",
 		"docs": "typedoc",
