feat: send JWT token in verification email

--- a/.env.example
+++ b/.env.example
@@ -2,6 +2,7 @@ DB_URI="mongodb://localhost:27017/multiemail"
 GOOGLE_CLIENT_ID="758327950938-90jskrnp9b8d2e6ljpqrstd8fdl2k9fljkhchasnnrnj8.apps.googleusercontent.com"
 GOOGLE_CLIENT_SECRET="GOCSPX-NL52LzLNzF6YGJxlAoeLAnGK-a6"
 NODE_ENV="development"
+FRONTEND_URL="http://localhost:8000"
 EMAIL_ID="no-reply@multiemail.us"
 EMAIL_PASSWORD="mystrongpassword"
 EMAIL_SMTP="smtp.server.com"
