docs: update @aayushchugh as a contributor

--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -20,7 +20,11 @@
         "review",
         "doc",
         "maintenance",
-        "projectManagement"
+        "projectManagement",
+        "bug",
+        "ideas",
+        "mentoring",
+        "security"
       ]
     },
     {
