docs: update @is-it-ayush as a contributor

--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -68,7 +68,10 @@
         "mentoring",
         "review",
         "maintenance",
-        "test"
+        "test",
+        "bug",
+        "security",
+        "ideas"
       ]
     },
     {
