docs: update @NullableDev as a contributor

--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -144,7 +144,8 @@
       "profile": "https://github.com/NullableDev",
       "contributions": [
         "bug",
-        "security"
+        "security",
+        "ideas"
       ]
     }
   ],
