docs: update @CodesWithJames as a contributor

--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -71,7 +71,8 @@
       "profile": "https://www.jamesmesser.xyz",
       "contributions": [
         "financial",
-        "ideas"
+        "ideas",
+        "business"
       ]
     },
     {
