docs: update @tharun634 as a contributor

--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -50,7 +50,8 @@
       "profile": "https://github.com/tharun634",
       "contributions": [
         "doc",
-        "code"
+        "code",
+        "infra"
       ]
     },
     {
