docs: update @aayushchugh as a contributor

--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -19,7 +19,10 @@
         "bug",
         "ideas",
         "mentoring",
-        "security"
+        "security",
+        "code",
+        "maintenance",
+        "projectManagement"
       ]
     },
     {
