docs: update @is-it-ayush as a contributor

--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -65,7 +65,11 @@
       "contributions": [
         "bug",
         "security",
-        "ideas"
+        "ideas",
+        "mentoring",
+        "code",
+        "maintenance",
+        "projectManagement"
       ]
     },
     {
