docs: update @is-it-ayush as a contributor

--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -69,7 +69,8 @@
         "mentoring",
         "code",
         "maintenance",
-        "projectManagement"
+        "projectManagement",
+        "review"
       ]
     },
     {
