docs: update @aayushchugh as a contributor

--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -22,7 +22,8 @@
         "security",
         "code",
         "maintenance",
-        "projectManagement"
+        "projectManagement",
+        "review"
       ]
     },
     {
