--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,7 @@
 DB_URI="mongodb://localhost:27017/multiemail"
 GOOGLE_CLIENT_ID="758327950938-90jskrnp9b8d2e6ljpqrstd8fdl2k9fljkhchasnnrnj8.apps.googleusercontent.com"
 GOOGLE_CLIENT_SECRET="GOCSPX-NL52LzLNzF6YGJxlAoeLAnGK-a6"
+GOOGLE_REDIRECT_URL="http://localhost:3001/api/auth/oauth/google/redirect"
 NODE_ENV="development"
 FRONTEND_URL="http://localhost:8000"
 EMAIL_ID="no-reply@multiemail.us"
