--- a/package.json
+++ b/package.json
@@ -16,16 +16,16 @@
 	},
 	"dependencies": {
 		"@typegoose/typegoose": "^9.12.1",
+		"@types/axios": "^0.14.0",
 		"@types/lodash": "^4.14.186",
 		"@types/nodemailer": "^6.4.6",
+		"axios": "^1.1.2",
 		"bcrypt": "^5.0.1",
 		"body-parser": "^1.20.0",
-		"cookie-session": "^2.0.0",
 		"cors": "^2.8.5",
 		"dotenv": "^16.0.2",
 		"express": "^4.18.1",
 		"express-rate-limit": "^6.6.0",
-		"express-session": "^1.17.3",
 		"helmet": "^6.0.0",
 		"http-status-codes": "^2.2.0",
 		"jsonwebtoken": "^8.5.1",
@@ -33,11 +33,10 @@
 		"mongoose": "^6.6.1",
 		"nodemailer": "^6.8.0",
 		"nodemon": "^2.0.20",
-		"passport": "0.6.0",
-		"passport-google-oauth20": "^2.0.0",
 		"pino": "^8.6.0",
 		"pino-pretty": "^9.1.0",
 		"prisma": "^4.3.1",
+		"qs": "^6.11.0",
 		"ts-jest": "^29.0.3",
 		"yargs": "^17.6.0",
 		"zod": "^3.19.1"
@@ -46,14 +45,10 @@
 		"@commitlint/cli": "17.1.2",
 		"@commitlint/config-conventional": "17.1.0",
 		"@types/bcrypt": "5.0.0",
-		"@types/cookie-session": "2.0.44",
 		"@types/cors": "2.8.12",
 		"@types/dotenv": "8.2.0",
 		"@types/express": "4.17.14",
-		"@types/express-session": "1.17.5",
 		"@types/jsonwebtoken": "8.5.9",
-		"@types/passport": "1.0.11",
-		"@types/passport-google-oauth20": "2.0.11",
 		"@typescript-eslint/eslint-plugin": "5.40.0",
 		"@typescript-eslint/parser": "5.40.0",
 		"add": "2.0.6",
