feat: sanitize html before sending email in gmail

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,5 @@
 {
-	"cSpell.words": ["markverified"],
+	"cSpell.words": ["dompurify", "markverified"],
 	"docwriter.style": "Auto-detect",
 	"editor.tabSize": 4,
 	"editor.comments.insertSpace": true,
