--- a/package.json
+++ b/package.json
@@ -71,6 +71,7 @@
 		"eslint-plugin-sonarjs": "0.16.0",
 		"husky": "8.0.1",
 		"jest": "29.2.2",
+		"lint-staged": "^13.0.3",
 		"mongodb-memory-server": "8.9.5",
 		"prettier": "2.7.1",
 		"prettier-eslint": "15.0.1",
@@ -80,5 +81,11 @@
 		"ts-node-dev": "2.0.0",
 		"typedoc": "0.23.19",
 		"typescript": "4.8.4"
+	},
+	"lint-staged": {
+		"**/*.{js,jsx,ts,tsx}": [
+			"npx prettier --write",
+			"npx eslint --fix"
+		]
 	}
 }
