feat: route to delete email
- edited docker compose file to get .env file without typing it manually in terminal
- removed unwanted packages from package.json

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,6 +18,8 @@ services:
             - ./bin:/usr/src/app/bin
         ports:
             - 3001:3001
+        env_file:
+            - .env
         depends_on:
             - mongo_db
 volumes:
