feat: unsubscribe user from marketing emails

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,4 @@
+BASE_URL="http://localhost:3001"
 DB_URI="mongodb://localhost:27017/multiemail"
 GOOGLE_CLIENT_ID="758327950938-90jskrnp9b8d2e6ljpqrstd8fdl2k9fljkhchasnnrnj8.apps.googleusercontent.com"
 GOOGLE_CLIENT_SECRET="GOCSPX-NL52LzLNzF6YGJxlAoeLAnGK-a6"
